syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.netease.cloud.nsf.demo.stock.service";
option java_outer_classname = "EchoService";

// The greeting service definition.
service Echo {
    // Sends a greeting
    rpc Echo (EchoRequest) returns (EchoReply) {}
    rpc EchoStr (EchoRequest) returns (EchoReply) {}
}

// The request message containing the user's name.
message EchoRequest {
    string name = 1;
}

// The response message containing the greetings
message EchoReply {
    string message = 1;
}
